--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.0.1",
     "eslint": "^8.22.0",
     "typescript": "^4.6.4",
+    "uuid": "^8.3.2",
     "vite": "^3.0.7"
   }
 }
